--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -30,7 +30,7 @@
  
 }
 
-@media screen and (max-height: 720px) {
+@media screen and (max-height: 750px) {
   .mePic {
     visibility: hidden;
     padding: 0px;
